--- a/templates/about.html
+++ b/templates/about.html
@@ -179,7 +179,7 @@
     
         <div class="footer">
             <div>کاری از تیم کتاب بیس</div>
-            <a href="../main.html" class="back-button">بازگشت</a>
+            <a href="../index.html" class="back-button">بازگشت</a>
         </div>
     </div>
     </body></html>
