--- a/templates/search.html
+++ b/templates/search.html
@@ -211,7 +211,7 @@
     </head>
     <body>
     <div class="container">
-        <button onclick="window.location.href='../main.html'" class="back-button">
+        <button onclick="window.location.href='../index.html'" class="back-button">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
             </svg>
