--- a/templates/edit.html
+++ b/templates/edit.html
@@ -236,7 +236,7 @@
             </div>
     
             <div class="btn-group">
-                <button type="button" class="back-btn" onclick="window.location.href='../main.html'">بازگشت به صفحه اصلی</button>
+                <button type="button" class="back-btn" onclick="window.location.href='../index.html'">بازگشت به صفحه اصلی</button>
                 <button type="submit" class="btn" id="submit">ذخیره اطلاعات</button>
             </div>
         </form>
