--- a/templates/list.html
+++ b/templates/list.html
@@ -153,7 +153,7 @@
     </head>
     <body>
     <div class="container">
-        <a href="../main.html" class="back-button">
+        <a href="../index.html" class="back-button">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M19 12H5M12 19l-7-7 7-7"/>
             </svg>
